# zeppl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig.defaults
.github/workflows/: firmware-build.yml  host-tests.yml  lint.yml
.zed/: tasks.json
companion/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
companion/app/: build.gradle.kts  proguard-rules.pro
companion/gradle/: libs.versions.toml
docs/: 00-MASTER-PROJECT-PLAN.md  01-PHASE2-DISPLAY-PLAN.md  02-PHASE2.5-OFFBIKE-PLAN.md  03-PHASE3-J1850-GPS-PLAN.md  03-PHASE3-J1850-PLAN.md  ARCHITECTURE.md  PROJECT-BRIEF.md
docs/schematics/: README.md  bike-power-chain.bom.md  bike-power-chain.py  bike_power_perfboard.py  discrete_divider.py  gps_module.py  j1850_rx.py  j1850_signal_board.py  j1850_tx.py
docs/waveshare-reference/examples/esp-idf/08_lvgl_demo_v9/components/waveshare__esp32_p4_wifi6_touch_lcd_xc/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_xc.c  idf_component.yml
firmware/: .gitignore  CLAUDE.md  README.md  partitions.csv  sdkconfig.defaults
firmware/docs/: 01-PHASE2-DISPLAY-PLAN.md  ARCHITECTURE.md  DISPLAY-PERF-AND-MEMORY.md  PINS.md  bike-power-injection.md  ble-bringup-bisect.md  gps-module.md  j1850-toggling-isr-candidate.md  live-gauge-bench-test.md  map-worldwide-plan.md  ride-1-findings.md  ride-2-calibration-plan.md  ride-2-findings.md  ride-3-plan.md  signal-mapping-capture.md  stage4-tx-bench-log.md
firmware/docs/waveshare-reference/examples/esp-idf/08_lvgl_demo_v9/main/: CMakeLists.txt  main.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/main/assets/: corridor.zmta  track.txt
firmware/main/ble/: ble_peripheral.c  ble_peripheral.h
firmware/main/display/: boot_screen.c  boot_screen.h  format.c  format.h  gesture.c  gesture.h  screen_bench.c  screen_map.c  screen_map.h  screen_pairing.c  screen_pairing.h  screen_ride.c  screen_ride.h  screen_settings.c  screen_settings.h  screen_settings_bluetooth.c  screen_settings_general.c  screen_settings_trip.c  theme.h  ui_manager.c  ui_manager.h  units.c  units.h  widget_util.c  widget_util.h
firmware/main/display/fonts/: emoji_font.c  emoji_font.h  jbm_bold_144.c  jbm_bold_26.c  jbm_bold_33.c  jbm_bold_72.c  jbm_bold_90.c  mdi_36.c  mdi_50.c  mdi_60.c  mdi_96.c
firmware/main/display/widgets/: clock_display.c  clock_display.h  fuel_arc.c  fuel_arc.h  fuel_bar.c  fuel_bar.h  fuel_scale.c  fuel_scale.h  gear_indicator.c  gear_indicator.h  media_banner.c  media_banner.h  notification_banner.c  notification_banner.h  now_playing_display.c  now_playing_display.h  odometer_display.c  odometer_display.h  rpm_bar.c  rpm_bar.h  rpm_scale.c  rpm_scale.h  smooth.c  smooth.h  speed_display.c  speed_display.h  sprite_raster.h  tach_arc.c  tach_arc.h  temp_display.c  temp_display.h  trip_display.c  trip_display.h  turn_signals.c  warning_lights.c
firmware/main/gps/: gps_sim.c  gps_source.c  gps_source.h  gps_uart.c  gps_uart.h  nmea.c  nmea.h
firmware/main/j1850/: j1850_adc_probe.c  j1850_adc_probe.h  j1850_bench_feed.c  j1850_bench_feed.h  j1850_driver.c  j1850_driver.h  j1850_edge.c  j1850_edge.h  j1850_parse.c  j1850_parse.h  j1850_sniffer.c  j1850_sniffer.h  j1850_tx.c  ride_log.c  ride_log.h  ride_log_format.c  ride_log_format.h
firmware/main/map/: map_cells.c  map_cells.h  map_demo.c  map_demo.h  map_render.c  map_render.h  map_sd.c  map_sd.h  map_source.c  map_source.h  map_style.h  map_tile.c  map_tile.h  map_world.c  map_world.h
firmware/main/phone/: phone.h  phone_data.c  phone_data.h  phone_protocol.c  phone_protocol.h  telemetry_codec.c  telemetry_codec.h  telemetry_publisher.c  telemetry_publisher.h
firmware/main/settings/: settings.c  settings.h  settings_store.c  settings_store.h
firmware/main/simulator/: gear_table.c  gear_table.h  sim_engine.c  sim_engine.h  sim_math.c  sim_math.h
firmware/main/sound/: sound.h
firmware/main/storage/: sd_mount.c  sd_mount.h
firmware/main/vehicle/: gear_calc.c  gear_calc.h  odo_meter.c  odo_meter.h  odo_store.c  odo_store.h  trip_meter.c  trip_meter.h  vehicle_data.c  vehicle_data.h
firmware/simulator/: CMakeLists.txt  README.md  ble_peripheral_shim.c  lv_conf.h  main.c  phone_mock.c  phone_mock.h  test_bridge.c  test_bridge.h  ui_manager_shim.c
firmware/test_apps/host/: CMakeLists.txt  README.md  coverage.sh
firmware/test_apps/host/tests/: test_alert_engine.c  test_format.c  test_fuel_scale.c  test_gear_calc.c  test_gesture.c  test_gps_source.c  test_j1850_driver.c  test_j1850_edge.c  test_j1850_parse.c  test_map_cells.c  test_map_tile.c  test_map_world.c  test_nmea.c  test_odo_meter.c  test_phone_data.c  test_phone_protocol.c  test_ride_log_format.c  test_rpm_scale.c  test_settings.c  test_sprite_raster.c  test_tach_arc.c  test_telemetry_codec.c  test_trip_meter.c  test_units.c  test_vehicle_data.c  test_widget_caches.c
hardware/enclosure/: README.md  enclosure.scad  section_preview.scad
main/: CMakeLists.txt  idf_component.yml  main.c
main/ble/: ble_peripheral.c
main/display/: boot_screen.c  screen_ride.c  screen_ride.h  screen_settings.c  ui_manager.c  ui_manager.h  widget_util.c
main/display/fonts/: jbm_bold_33.c  jbm_bold_45.c  mdi_36.c
main/display/widgets/: clock_display.c  fuel_bar.c  gear_indicator.c  gear_indicator.h  odometer_display.c  odometer_display.h  speed_display.c  speed_display.h  speedo_arc.c  speedo_arc.h  tach_arc.c  tach_arc.h  temp_display.c  trip_display.c  turn_signals.c  turn_signals.h  warning_lights.c  warning_lights.h
main/settings/: settings.c  settings_store.c
main/simulator/: sim_engine.c
main/sound/: sound.c
main/vehicle/: vehicle_data.h
simulator/: CMakeLists.txt  main.c  ui_manager_shim.c
test_apps/host/: CMakeLists.txt  README.md  coverage.sh
test_apps/host/tests/: test_format.c  test_gear_table.c  test_runner.c  test_settings.c  test_sim_math.c  test_smooth.c  test_widget_caches.c
tools/: j1850_capture.py  j1850_report.py  notify.py
tools/maptiles/: .gitignore  README.md  (+7 more)
(+140 files in other folders)
